# vosk-service

./: .gitignore  CMakeLists.txt  README.MD  qt.txt
cmake/: configure.cmake
src/: CMakeLists.txt
src/controllers/: CMakeLists.txt
src/controllers/interfaces/: server.hpp  storage.hpp
src/controllers/server/: CMakeLists.txt
src/controllers/server/impl/: server_impl.cpp  server_impl.hpp
src/controllers/storage/: CMakeLists.txt
src/controllers/storage/impl/: storage_impl.cpp  storage_impl.hpp
src/controllers/types/: data_types.hpp
src/core/: CMakeLists.txt  core.hpp  main.cpp  model.hpp  recognizer.hpp
src/core/impl/: core_impl.cpp  core_impl.hpp  listener_impl.cpp  listener_impl.hpp  model_impl.cpp  model_impl.hpp
src/core/interfaces/: core.hpp  listener.hpp  model.hpp
src/core/types/: data_types.hpp  macro.hpp
src/example/: CMakeLists.txt  example.cpp
src/graphics/: CMakeLists.txt
src/graphics/application/: CMakeLists.txt  main.cpp
src/graphics/gui/: CMakeLists.txt  application.cpp  application.hpp
src/types/: macro.hpp
src/vosk_wrapper/: CMakeLists.txt  main.cpp
src/vosk_wrapper/core/: CMakeLists.txt
src/vosk_wrapper/core/impl/: core_impl.cpp  core_impl.hpp  listener_impl.cpp  listener_impl.hpp  model_impl.cpp  model_impl.hpp
src/vosk_wrapper/core/interfaces/: core.hpp  listener.hpp  model.hpp
src/vosk_wrapper/core/types/: data_types.hpp
src/vosk_wrapper/interfaces/: core.hpp  listener.hpp  model.hpp
